Fixed tx display spacing; fixed trade summary section widths

--- a/src/modules/trade/less/trade-summary.less
+++ b/src/modules/trade/less/trade-summary.less
@@ -31,7 +31,7 @@
         .description {
 			display: inline-block;
 			flex: 2;
-			width: 50%;
+			width: 70%;
 			margin: auto;
 			line-height: 1.5em;
 			text-align: left;
@@ -64,7 +64,7 @@
         }
         .value-changes {
             display: inline-block;
-            width: 50%;
+            width: 30%;
             text-align: right;
 
             .value-change {
