--- a/src/modules/transactions/less/transactions.less
+++ b/src/modules/transactions/less/transactions.less
@@ -78,6 +78,10 @@
                     	font-size: 0.8em;
                     }
 
+                    .hide-in-tx-display {
+                        display: none;
+                    }
+
                     .avgPrice {
                         display: none;
                     }
